- fix stick footer scrolling away with too long content

--- a/app/styles/main.sass
+++ b/app/styles/main.sass
@@ -8,6 +8,11 @@
 @import bootstrap-sass-official/assets/stylesheets/bootstrap
 @import bootswatch-scss/slate/bootswatch
 
+// sticky footer
+html
+  position: relative
+  min-height: 100%
+
 // Space out content a bit
 body
   padding-top: 150px
@@ -15,6 +20,7 @@ body
   /* Margin bottom by footer height */
   margin-bottom: 60px
 
+// sticky footer
 .footer
   position: absolute
   bottom: 0
